2009-08-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* progmodes/sql.el (sql-product-alist): Add :name tag to entries.
	(sql-product): Use it.
	(sql-mode-menu): Auto-generate the menu based on sql-product-alist.
	(sql-set-product): Add completion.
	(sql-highlight-oracle-keywords, sql-highlight-postgres-keywords)
	(sql-highlight-linter-keywords, sql-highlight-ms-keywords)
	(sql-highlight-ansi-keywords, sql-highlight-sybase-keywords)
	(sql-highlight-informix-keywords, sql-highlight-interbase-keywords)
	(sql-highlight-ingres-keywords, sql-highlight-solid-keywords)
	(sql-highlight-mysql-keywords, sql-highlight-sqlite-keywords)
	(sql-highlight-db2-keywords): Remove.
	(sql-find-sqli-buffer, sql-set-sqli-buffer-generally)
	(sql-highlight-product): Use derived-mode-p.
	(sql-set-sqli-buffer): Use with-current-buffer.
	(sql-connect-informix, sql-connect-ingres, sql-connect-oracle):
	Simplify.

	* emacs-lisp/lisp-mode.el (lisp-indent-region): Remove unused function.

	* term.el: Fix commenting convention, turn comments into docstrings.

2009-08-16  E. Jay Berkenbilt  <ejb@ql.org>  (tiny change)

	* whitespace.el (whitespace-style): Doc fix (Bug#3661).

2009-08-16  Jan Seeger <jan.seeger@thenybble.de>  (tiny change)

	* calendar/parse-time.el (parse-time-string-chars): Compute using
	character classes, to handle non-ascii characters (Bug#3190).

2009-08-16  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/sh-script.el (sh-maybe-here-document): Avoid inserting
	another heredoc if the user adds another < (Bug#3226).

	* mwheel.el (mouse-wheel-down-event, mouse-wheel-up-event):
	Don't initialize based on window-system (Bug#4124).

	* facemenu.el (facemenu-read-color): Use a completion function
	that accepts any defined color, such as RGB triplets (Bug#3677).

	* files.el (get-free-disk-space): Change fallback default
	directory to /.  Expand DIR argument before switching to fallback.
	Suggested by Kevin Ryde (Bug#2631, Bug#3911).
